--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "mongoose": "^4.8.4"
   }
